--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.github.radm</groupId>
 	<artifactId>ros</artifactId>
 	<version>${revision}</version>
-    <packaging>pom</packaging>
+	<packaging>pom</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,6 +17,7 @@
 			<artifactId>plantuml</artifactId>
 			<version>1.2024.7</version>
 		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -28,8 +29,7 @@
 					<sourceFiles>
 						<directory>${project.basedir}/images</directory>
 						<includes>
-							<include>**.uml</include>> 
-						</includes>
+							<include>**.uml</include>> </includes>
 					</sourceFiles>
 					<outputDirectory>${project.build.outputDirectory}</outputDirectory>
 					<format>svg</format>
@@ -45,28 +45,34 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>3.1.0</version>
-				<configuration>
-					<mainClass>net.sourceforge.plantuml.Run</mainClass>
-					<commandlineArgs>-encodesprite 16z fvtt/src/assets/images/runes/air.svg</commandlineArgs>
-				
-				</configuration>
+				<groupId>org.codehaus.gmaven</groupId>
+				<artifactId>groovy-maven-plugin</artifactId>
 				<executions>
 					<execution>
 						<?m2e execute onIncremental?>
 						<id>sprites</id>
 						<phase>generate-resources</phase>
 						<goals>
-							<goal>java</goal>
+							<goal>execute</goal>
 						</goals>
+						<configuration>
+							<source>
+								${project.basedir}/scripts/plantUmlSprites.groovy</source>
+						</configuration>
 					</execution>
 				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.groovy</groupId>
+						<artifactId>groovy-all</artifactId>
+						<version>4.0.23</version>
+						<type>pom</type>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
-    
+
 	<profiles>
 		<profile>
 			<id>Windows</id>
